[AGAA] D: finish reading [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -308,6 +308,9 @@ Appendix
 </li><li>
 <a href="C.html">C. Polar Form of Conic Sections</a>
 
+</li><li>
+<a href="D.html">D. Rotation of Axes</a>
+
 </li></ol>
 </li></ol>
 </div>
