[ABPC] Continue with notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/D.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/D.html
@@ -63,7 +63,7 @@ Given a \(xy\)-coordinate system having origin \(O\). If we rotate the axes abou
 </p>
 
 <p>
-Let \(P\) be any point other than the origin, with coordinates \((x, y)\) in the \(xy\)-system and \((x', y')\) in the \(x'y'\)-system (See FIGURE 1). Let \(OP = 1\) and \(\alpha\) be the angle made by \(OP\) and the \(x'\) axis. Then the following holds:
+Let \(P\) be any point other than the origin, with coordinates \((x, y)\) in the \(xy\)-system and \((x', y')\) in the \(x'y'\)-system (See FIGURE 1). Let \(OP = r\) and \(\alpha\) be the angle made by \(OP\) and the \(x'\) axis. Then the following holds:
 </p>
 
 \begin{align}
