--- a/src/Notes/Music/ABPCI/index.html
+++ b/src/Notes/Music/ABPCI/index.html
@@ -109,6 +109,46 @@ This note has a count of \(2\).
 </p>
 
 <div id="Alfred Basic Piano Course I-Left Hand C Position"><h2 id="Left Hand C Position" class="header"><a href="#Alfred Basic Piano Course I-Left Hand C Position">Left Hand C Position</a></h2></div>
+
+<p>
+This position is obtained by moving the left hand so that the \(5\)th finger falls on the Do below the middle Do. The remaning \(4\) fingers fall naturally on the next \(4\) white keys.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/left_hand_c_position.png" alt="Left Hand C Position" style="width:700px;">
+</p>
+
+<p>
+Notes for this position are writter on the <span id="Alfred Basic Piano Course I-Left Hand C Position-bass staff"></span><strong id="bass staff">bass staff</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/left_hand_c_position_score.png" alt="Left Hand C Position Score" style="width:600px;">
+</p>
+
+<div id="Alfred Basic Piano Course I-The Whole Note"><h2 id="The Whole Note" class="header"><a href="#Alfred Basic Piano Course I-The Whole Note">The Whole Note</a></h2></div>
+
+<p>
+A whole note is written as follows:
+</p>
+
+<p>
+This noe has a count of \(4\).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/whole_note.png" alt="Whole Note">
+</p>
+
+<div id="Alfred Basic Piano Course I-The Grand Staff"><h2 id="The Grand Staff" class="header"><a href="#Alfred Basic Piano Course I-The Grand Staff">The Grand Staff</a></h2></div>
+
+<p>
+The bass staff and the treble staff, when joined together with a brace, make up the <span id="Alfred Basic Piano Course I-The Grand Staff-grand staff"></span><strong id="grand staff">grand staff</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/grand_staff.png" alt="Grand Staff" style="width:800px;">
+</p>
 </div>
   
 
