[ABPC] Continue with notes [skip ci]

--- a/src/Notes/Music/ABPCI/index.html
+++ b/src/Notes/Music/ABPCI/index.html
@@ -149,6 +149,72 @@ The bass staff and the treble staff, when joined together with a brace, make up 
 <p>
 <img src="https://albamr09.github.io/public/assets/grand_staff.png" alt="Grand Staff" style="width:800px;">
 </p>
+
+<div id="Alfred Basic Piano Course I-Time Signature"><h2 id="Time Signature" class="header"><a href="#Alfred Basic Piano Course I-Time Signature">Time Signature</a></h2></div>
+
+<p>
+Music has numbers at the beginning of a score called the <span id="Alfred Basic Piano Course I-Time Signature-time signature"></span><strong id="time signature">time signature</strong>. Where the upper \(4\) means \(4\) beats per measure and the lower \(4\) means that a <span id="Alfred Basic Piano Course I-Time Signature-quarter note"></span><strong id="quarter note">quarter note</strong> get one beat.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/time_signature.png" alt="Time Signature">
+</p>
+
+<div id="Alfred Basic Piano Course I-Melodic Intervals"><h2 id="Melodic Intervals" class="header"><a href="#Alfred Basic Piano Course I-Melodic Intervals">Melodic Intervals</a></h2></div>
+
+<p>
+Distances between tones are measured in <span id="Alfred Basic Piano Course I-Melodic Intervals-intervals"></span><strong id="intervals">intervals</strong>, called \(2\)nds, \(3\)rds, \(4\)ths, \(5\)ths, etc.
+</p>
+
+<p>
+Notes playes separately make a <span id="Alfred Basic Piano Course I-Melodic Intervals-melody"></span><strong id="melody">melody</strong>, and we call the intervals between these notes <span id="Alfred Basic Piano Course I-Melodic Intervals-melodic intervals"></span><strong id="melodic intervals">melodic intervals</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/melodic_intervals.png" alt="Melodic Intervals">
+</p>
+
+<div id="Alfred Basic Piano Course I-Dynamic Signs"><h2 id="Dynamic Signs" class="header"><a href="#Alfred Basic Piano Course I-Dynamic Signs">Dynamic Signs</a></h2></div>
+
+<p>
+The signs that tell up how load or soft to play are called <span id="Alfred Basic Piano Course I-Dynamic Signs-dynamic signs"></span><strong id="dynamic signs">dynamic signs</strong>. For example:
+</p>
+
+<p>
+A \(\textit{p (piano)}\) tells us to play soft.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/dynamic_signs_piano.png" alt="Dynamic Signs(piano)">
+</p>
+
+<p>
+A \(\textit{mf (mezzoforte)}\) tells us to moderately loud.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/dynamic_signs_mezzoforte.png" alt="Dynamic Signs (mezzoforte)">
+</p>
+
+<p>
+A \(\textit{f (forte)}\) tells us to loud.
+</p>
+
+<div id="Alfred Basic Piano Course I-Harmonic Intervals"><h2 id="Harmonic Intervals" class="header"><a href="#Alfred Basic Piano Course I-Harmonic Intervals">Harmonic Intervals</a></h2></div>
+
+<p>
+Notes played together make <span id="Alfred Basic Piano Course I-Harmonic Intervals-harmony"></span><strong id="harmony">harmony</strong>. We call the intervals between these notes <span id="Alfred Basic Piano Course I-Harmonic Intervals-harmonic intervals"></span><strong id="harmonic intervals">harmonic intervals</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/harmonic_intervals.png" alt="Harmonic Intervals">
+</p>
+
+<div id="Alfred Basic Piano Course I-The Do Major Chord"><h2 id="The Do Major Chord" class="header"><a href="#Alfred Basic Piano Course I-The Do Major Chord">The Do Major Chord</a></h2></div>
+
+<p>
+A <span id="Alfred Basic Piano Course I-The Do Major Chord-chord"></span><strong id="chord">chord</strong> is three or more notes played together. The <span id="Alfred Basic Piano Course I-The Do Major Chord-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-The Do Major Chord-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-The Do Major Chord-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-The Do Major Chord-Sol"></span><strong id="Sol">Sol</strong>.
+</p>
 </div>
   
 
