[ABPC] Continue with notes [skip ci]

--- a/src/Notes/Music/ABPCI/index.html
+++ b/src/Notes/Music/ABPCI/index.html
@@ -210,10 +210,26 @@ Notes played together make <span id="Alfred Basic Piano Course I-Harmonic Interv
 <img src="https://albamr09.github.io/public/assets/harmonic_intervals.png" alt="Harmonic Intervals">
 </p>
 
-<div id="Alfred Basic Piano Course I-The Do Major Chord"><h2 id="The Do Major Chord" class="header"><a href="#Alfred Basic Piano Course I-The Do Major Chord">The Do Major Chord</a></h2></div>
+<div id="Alfred Basic Piano Course I-Important Chords"><h2 id="Important Chords" class="header"><a href="#Alfred Basic Piano Course I-Important Chords">Important Chords</a></h2></div>
 
 <p>
-A <span id="Alfred Basic Piano Course I-The Do Major Chord-chord"></span><strong id="chord">chord</strong> is three or more notes played together. The <span id="Alfred Basic Piano Course I-The Do Major Chord-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-The Do Major Chord-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-The Do Major Chord-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-The Do Major Chord-Sol"></span><strong id="Sol">Sol</strong>.
+A <span id="Alfred Basic Piano Course I-Important Chords-chord"></span><strong id="chord">chord</strong> is three or more notes played together. 
+</p>
+
+<p>
+The <span id="Alfred Basic Piano Course I-Important Chords-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Important Chords-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Important Chords-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-Important Chords-Sol"></span><strong id="Sol">Sol</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/c_major_chord.png" alt="The C Major Chord">
+</p>
+
+<p>
+The \(\texbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Important Chords-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Important Chords-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Important Chords-Sol"></span><strong id="Sol">Sol</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/sol_7_chord.png" alt="The Sol7 Chord">
 </p>
 </div>
   
