[ICPDM] T1: finish notes [skip ci]

--- a/src/Notes/DataScience/Master/3C_1C/ICPDM/index.html
+++ b/src/Notes/DataScience/Master/3C_1C/ICPDM/index.html
@@ -1,9 +1,9 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../../src/style/custom.css">
-    <title>Data Science Master</title>
+    <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/custom.css">
+    <title>Infraestructuras Computacionales para Procesamiento de Datos Masivos</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,31 +31,18 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="../../index.html">Back</a>
 </p>
 
-<div id="Data Science Master"><h1 id="Data Science Master" class="header"><a href="#Data Science Master">Data Science Master</a></h1></div>
+<div id="Infraestructuras Computacionales para Procesamiento de Datos Masivos"><h1 id="Infraestructuras Computacionales para Procesamiento de Datos Masivos" class="header"><a href="#Infraestructuras Computacionales para Procesamiento de Datos Masivos">Infraestructuras Computacionales para Procesamiento de Datos Masivos</a></h1></div>
 
 <hr>
 
-<div id="Data Science Master-2C 2C"><h2 id="2C 2C" class="header"><a href="#Data Science Master-2C 2C">2C 2C</a></h2></div>
+<div id="Infraestructuras Computacionales para Procesamiento de Datos Masivos-Módulo 1"><h2 id="Módulo 1" class="header"><a href="#Infraestructuras Computacionales para Procesamiento de Datos Masivos-Módulo 1">Módulo 1</a></h2></div>
 
 <ul>
 <li>
-<a href="2C_2C/AAII/index.html">Aprendizaje Automático II</a>
-
-</li><li>
-<a href="2C_2C/DL/index.html">Deep Learning</a>
-
-</li><li>
-<a href="2C_2C/MBJ/index.html">Modelos Bayesianos Jerárquicos</a>
-
-</li></ul>
-<div id="Data Science Master-3C 1C"><h2 id="3C 1C" class="header"><a href="#Data Science Master-3C 1C">3C 1C</a></h2></div>
-
-<ul>
-<li>
-<a href="3C_1C/ICPDM/index.wikiInfraestructuras Computacionales para Procesamiento de Datos Masivos.html">./3C_1C/ICPDM/index.wikiInfraestructuras Computacionales para Procesamiento de Datos Masivos</a>
+<a href="01_intro.html">Tema 1. Introducción a Big Data</a>
 
 </li></ul>
 </div>
