--- a/src/Notes/Math/Pre-Calculus/AGAA/B.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/B.html
@@ -66,7 +66,7 @@
 <div id="Vectors in Space-Rectangular Coordinates in Space"><h2 id="Rectangular Coordinates in Space" class="header"><a href="#Vectors in Space-Rectangular Coordinates in Space">Rectangular Coordinates in Space</a></h2></div>
 
 <p>
-On a three dimensional space, we associate each point with an <span id="Vectors in Space-Rectangular Coordinates in Space-ordered triple"></span><strong id="ordered triple">ordered triple</strong> \((x, y z)\) (see FIGURE 1). The region of three-dimensional space where are coordinates are positive is called the <span id="Vectors in Space-Rectangular Coordinates in Space-first octant"></span><strong id="first octant">first octant</strong>. There are eight octants in all.
+On a three dimensional space, we associate each point with an <span id="Vectors in Space-Rectangular Coordinates in Space-ordered triple"></span><strong id="ordered triple">ordered triple</strong> \((x, y, z)\) (see FIGURE 1). The region of three-dimensional space where are coordinates are positive is called the <span id="Vectors in Space-Rectangular Coordinates in Space-first octant"></span><strong id="first octant">first octant</strong>. There are eight octants in all.
 </p>
 
 <p>
