[ICPDM]: fix link [skip ci]

--- a/src/Notes/DataScience/Master/index.html
+++ b/src/Notes/DataScience/Master/index.html
@@ -55,7 +55,7 @@
 
 <ul>
 <li>
-<a href="3C_1C/ICPDM/index.wikiInfraestructuras Computacionales para Procesamiento de Datos Masivos.html">./3C_1C/ICPDM/index.wikiInfraestructuras Computacionales para Procesamiento de Datos Masivos</a>
+<a href="3C_1C/ICPDM/index.html">Infraestructuras Computacionales para Procesamiento de Datos Masivos</a>
 
 </li></ul>
 </div>
