[ABPCI] Continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/index.html
+++ b/src/Notes/Music/ABPCI/index.html
@@ -225,11 +225,59 @@ The <span id="Alfred Basic Piano Course I-Important Chords-Do Major Chord"></spa
 </p>
 
 <p>
-The \(\texbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Important Chords-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Important Chords-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Important Chords-Sol"></span><strong id="Sol">Sol</strong>.
+The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Important Chords-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Important Chords-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Important Chords-Sol"></span><strong id="Sol">Sol</strong>.
 </p>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/sol_7_chord.png" alt="The Sol7 Chord">
+</p>
+
+<p>
+The <span id="Alfred Basic Piano Course I-Important Chords-Fa Major Chord"></span><strong id="Fa Major Chord">Fa Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Important Chords-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Important Chords-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Important Chords-La"></span><strong id="La">La</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/fa_major_chord.png" alt="The Fa Major Chord">
+</p>
+
+<div id="Alfred Basic Piano Course I-Tied Notes"><h2 id="Tied Notes" class="header"><a href="#Alfred Basic Piano Course I-Tied Notes">Tied Notes</a></h2></div>
+
+<p>
+Whe notes on the same line of space are joined with a curved line, we call them <span id="Alfred Basic Piano Course I-Tied Notes-tied notes"></span><strong id="tied notes">tied notes</strong>. And the key is held down for the duration of both notes.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/tied_notes.png" alt="Tied Notes">
+</p>
+
+<div id="Alfred Basic Piano Course I-Dotted Half Note"><h2 id="Dotted Half Note" class="header"><a href="#Alfred Basic Piano Course I-Dotted Half Note">Dotted Half Note</a></h2></div>
+
+<p>
+A <span id="Alfred Basic Piano Course I-Dotted Half Note-dotted half note"></span><strong id="dotted half note">dotted half note</strong> gets \(3\) counts (\(2\) counts for the half note, plus \(1\) count for the dot).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/dotted_half_note.png" alt="Dotted Half Note">
+</p>
+
+<div id="Alfred Basic Piano Course I-Slur and Legato Playing"><h2 id="Slur and Legato Playing" class="header"><a href="#Alfred Basic Piano Course I-Slur and Legato Playing">Slur and Legato Playing</a></h2></div>
+
+<p>
+A <span id="Alfred Basic Piano Course I-Slur and Legato Playing-slur"></span><strong id="slur">slur</strong> is a curved line over or under notes on <span id="Alfred Basic Piano Course I-Slur and Legato Playing-different"></span><strong id="different">different</strong> lines or spaces. Slurs means play <span id="Alfred Basic Piano Course I-Slur and Legato Playing-legato"></span><strong id="legato">legato</strong> (smoothly connected), they often divide the music intro phrases (a musical thougth or sentence).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/slur.png" alt="Slur">
+</p>
+
+<div id="Alfred Basic Piano Course I-Incomplete Measure"><h2 id="Incomplete Measure" class="header"><a href="#Alfred Basic Piano Course I-Incomplete Measure">Incomplete Measure</a></h2></div>
+
+<p>
+Some pieces begin with an <span id="Alfred Basic Piano Course I-Incomplete Measure-incomplete measure"></span><strong id="incomplete measure">incomplete measure</strong>, that is it has one missing count:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/incomplete_measure.png" alt="Incomplete Measure">
 </p>
 </div>
   
