--- a/src/Notes/ComputerScience/CG/RTGW/index.html
+++ b/src/Notes/ComputerScience/CG/RTGW/index.html
@@ -54,6 +54,9 @@
 </li><li>
 <a href="05.html">Animations</a>
 
+</li><li>
+<a href="06.html">Colors, Depth Testing and Alpha Blending</a>
+
 </li></ol>
 </div>
   
