[CET] 01_01: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -1,9 +1,9 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/custom.css">
-    <title>Math</title>
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
+    <title>Calculus Ealy Transcendentals</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,27 +31,23 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="../../index.html">Back</a>
 </p>
 
-<div id="Math"><h1 id="Math" class="header"><a href="#Math">Math</a></h1></div>
+<div id="Calculus Ealy Transcendentals"><h1 id="Calculus Ealy Transcendentals" class="header"><a href="#Calculus Ealy Transcendentals">Calculus Ealy Transcendentals</a></h1></div>
 
 <hr>
-
-<div id="Math-Pre-Calculus"><h2 id="Pre-Calculus" class="header"><a href="#Math-Pre-Calculus">Pre-Calculus</a></h2></div>
-
-<ul>
+ 
+<ol>
 <li>
-<a href="Pre-Calculus/AGAA/index.html">A Graphical Approach to Algebra and Trigonometry</a>
+Functions and Models
 
-</li></ul>
-<div id="Math-Calculus"><h2 id="Calculus" class="header"><a href="#Math-Calculus">Calculus</a></h2></div>
-
-<ul>
+<ol>
 <li>
-<a href="Calculus/CET/index.html">Calculus Ealy Transcendentals</a>
+<a href="01_01.html">Four Ways to Represent a Function</a>
 
-</li></ul>
+</li></ol>
+</li></ol>
 </div>
   
 
