[ABPCI] Continue notes [skip ci]

--- a/src/Notes/Music/index.html
+++ b/src/Notes/Music/index.html
@@ -40,7 +40,7 @@
 
 <ol>
 <li>
-<a href="ABPCI/index.html">Basic Adult Piano Course</a>
+<a href="ABPCI/abpci.html">Basic Adult Piano Course</a>
 
 </li></ol>
 </div>
